# rusty-hateoas

./: .gitignore  Cargo.toml  readme.md
migrations/: 20230812224453_contacts.sql
src/: app.rs  lib.rs  main.rs
src/contacts/: forms.rs  mod.rs  models.rs  routes.rs
static/css/: style.css
static/js/: contactMenu.js
templates/: index.html  layout.html
templates/contacts/: _rows.html  create.html  detail.html  edit.html  list.html
