[package]
name = "rusty-hateoas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"]}
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "postgres", "macros" ] }
tera = "1.19.0"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
